# LosslessCodec

Convertor/: CMakeLists.txt  CMakeUserPresets.json  Constants.h  ConvertRAW.cpp  color_to8bit.cpp  color_to8bit.h  debayerization.cpp  debayerization.h  exifreader.cpp  exifreader.h  formatreader.cpp  formatreader.h  formatwriter.cpp  formatwriter.h  qoi.h  sepchannels.cpp  sepchannels.h  unitechannels.cpp  unitechannels.h
RawImage/: 19.34553.tiff  Ex12.qoi  Ex8.qoi  example12.dng  example8.dng  sample1.xmp  test1.xmp
